; ModuleID = '/home/carl/AnghaBench/linux/fs/nilfs2/extr_alloc.c_nilfs_palloc_commit_alloc_entry.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nilfs2/extr_alloc.c_nilfs_palloc_commit_alloc_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.nilfs_palloc_req = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nilfs_palloc_commit_alloc_entry(%struct.inode* %0, %struct.nilfs_palloc_req* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.nilfs_palloc_req*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.nilfs_palloc_req* %1, %struct.nilfs_palloc_req** %4, align 8
  %5 = load %struct.nilfs_palloc_req*, %struct.nilfs_palloc_req** %4, align 8
  %6 = getelementptr inbounds %struct.nilfs_palloc_req, %struct.nilfs_palloc_req* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @mark_buffer_dirty(i32 %7)
  %9 = load %struct.nilfs_palloc_req*, %struct.nilfs_palloc_req** %4, align 8
  %10 = getelementptr inbounds %struct.nilfs_palloc_req, %struct.nilfs_palloc_req* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @mark_buffer_dirty(i32 %11)
  %13 = load %struct.inode*, %struct.inode** %3, align 8
  %14 = call i32 @nilfs_mdt_mark_dirty(%struct.inode* %13)
  %15 = load %struct.nilfs_palloc_req*, %struct.nilfs_palloc_req** %4, align 8
  %16 = getelementptr inbounds %struct.nilfs_palloc_req, %struct.nilfs_palloc_req* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @brelse(i32 %17)
  %19 = load %struct.nilfs_palloc_req*, %struct.nilfs_palloc_req** %4, align 8
  %20 = getelementptr inbounds %struct.nilfs_palloc_req, %struct.nilfs_palloc_req* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @brelse(i32 %21)
  ret void
}

declare dso_local i32 @mark_buffer_dirty(i32) #1

declare dso_local i32 @nilfs_mdt_mark_dirty(%struct.inode*) #1

declare dso_local i32 @brelse(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
